add some sim-gazebo‘s instruction

--- a/andino_control/config/andino_controllers.yaml
+++ b/andino_control/config/andino_controllers.yaml
@@ -19,7 +19,7 @@ diff_controller:
     wheel_radius: 0.035
     odom_frame_id: odom
     base_frame_id: base_link
-    enable_odom_tf: true
+    enable_odom_tf: false
     use_stamped_vel: false
 
     linear.x.has_velocity_limits: false
